--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 								<article>
 									
-									<a href="#" class="image fit"><img src="images/ivonne.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/Ivonne.png" alt="" /></a>
 									<div class="texto1">
 										
 									<strong>Una de las experiencias más enriquecedoras en tu vida: </strong>
